fix z-index in occ table

--- a/src/main/webapp/less/occ_table.less
+++ b/src/main/webapp/less/occ_table.less
@@ -15,7 +15,7 @@
 }
 
 #content article.occurrence_results {
-  z-index:1000;
+  z-index:100;
   .content { padding: 0; }
 
   .content  > .footer {
